--- a/EasyMoney/app/src/main/res/values/themes.xml
+++ b/EasyMoney/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.EasyMoney" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.EasyMoney" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimaryVariant">@color/gray4</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -21,7 +21,12 @@
         <item name="android:windowBackground">@null</item>
     </style>
 
-    <style name="ThemeOverlay.EasyMoney.FullscreenContainer" parent="">
+    <style name="fullScreen" parent="Theme.EasyMoney.Fullscreen">
+        <item name="fullscreenBackgroundColor">@color/light_blue_600</item>
+        <item name="fullscreenTextColor">@color/light_blue_A200</item>
+    </style>
+
+    <style name="ThemeOverlay.EasyMoney.FullscreenContainer" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="fullscreenBackgroundColor">@color/light_blue_600</item>
         <item name="fullscreenTextColor">@color/light_blue_A200</item>
     </style>
