--- a/EasyMoney/app/src/main/res/layout/activity_register.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Register">
+    tools:context=".RegisterActivity">
 
     <ImageView
         android:id="@+id/btnBack"
@@ -39,10 +39,10 @@
         android:text="@string/txt_register_subInfo"
         app:layout_constraintBottom_toTopOf="@+id/userEmaill"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.232"
+        app:layout_constraintHorizontal_bias="0.16"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtLoginTitle"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.015" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/montSalary"
