--- a/EasyMoney/app/src/main/res/layout/activity_welcome.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_welcome.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backgroundgrandient"
-    tools:context=".Welcome">
+    tools:context=".WelcomeActivity">
 
     <TextView
         android:id="@+id/txtWelcome"
