--- a/EasyMoney/app/src/main/res/layout/activity_welcome.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_welcome.xml
@@ -32,7 +32,6 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/style_btn_white"
-        android:backgroundTint="#FFFFFF"
         android:text="@string/txt_btn_login"
         android:textColor="@color/primaryBlue"
         android:textSize="20sp"
@@ -56,4 +55,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnLogin"
         app:layout_constraintVertical_bias="0.046" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="276dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/appicon2"
+        tools:layout_editor_absoluteY="138dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
