--- a/EasyMoney/app/src/main/res/layout/activity_welcome.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_welcome.xml
@@ -7,13 +7,15 @@
     android:background="@drawable/backgroundgrandient"
     tools:context=".WelcomeActivity">
 
+
     <TextView
         android:id="@+id/txtWelcome"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="136dp"
         android:fontFamily="@font/lato_light"
         android:foregroundGravity="center"
         android:text="@string/txt_welcome"
@@ -21,8 +23,9 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/btnLogin"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <Button
         android:id="@+id/btnLogin"
@@ -30,6 +33,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/style_btn_white"
         android:text="@string/txt_btn_login"
@@ -37,7 +41,7 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="465dp" />
+        app:layout_constraintTop_toBottomOf="@+id/txtWelcome" />
 
     <Button
         android:id="@+id/btnSignUp"
@@ -60,9 +64,10 @@
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="276dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/appicon2"
-        tools:layout_editor_absoluteY="138dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/appicon2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
