fixed style issue

--- a/EasyMoney/app/src/main/res/layout/activity_login_test.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_login_test.xml
@@ -2,11 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    tools:context=".ui.login.LoginActivity">
+    tools:context=".Login_test">
 
 
     <com.google.android.material.textfield.TextInputLayout
@@ -139,7 +137,6 @@
         android:layout_marginTop="92dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login" />
-<!--        android:style="@style/txtRegister" -->
 
 
 
@@ -153,6 +150,5 @@
         app:layout_constraintStart_toEndOf="@+id/txtSignIn"
         app:layout_constraintTop_toBottomOf="@+id/login" />
 
-    <!--        android:style="@style/btnRegister"-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
