--- a/EasyMoney/app/src/main/res/values/styles.xml
+++ b/EasyMoney/app/src/main/res/values/styles.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+
+
     <style name="btnTextStyle1">
         <item name="android:textSize">20sp</item>
         <item name="android:fontFamily">@font/lato_light</item>
@@ -22,6 +24,12 @@
     <style name="txtSub">
         <item name="android:textSize">18sp</item>
         <item name="android:fontFamily">@font/lato_light</item>
+        <item name="android:textColor">@color/gray3</item>
+    </style>
+
+    <style name="txtSub.bold">
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/lato_bold</item>
         <item name="android:textColor">@color/gray3</item>
     </style>
 
