--- a/EasyMoney/app/src/main/res/layout/activity_register.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_register.xml
@@ -7,6 +7,8 @@
     tools:context=".RegisterActivity">
 
     <!--back button-->
+
+    <!--title text-->
     <ImageView
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
@@ -18,11 +20,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/btn_backbutton" />
 
-    <!--title text-->
-
-    <!--sub text-->
-
-    <!--user name-->
     <TextView
         android:id="@+id/txtLoginTitle"
         style="@style/txtTitle"
@@ -34,6 +31,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnBack" />
 
+    <!--sub text-->
     <TextView
         android:id="@+id/txtLoginSubTitle"
         style="@style/txtSub"
@@ -45,6 +43,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtLoginTitle" />
 
+    <!--user name -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/userName"
         android:layout_width="match_parent"
@@ -59,25 +58,32 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtLoginSubTitle"
         tools:boxCornerRadiusTopEnd="5dp"
-        tools:boxCornerRadiusTopStart="5dp">
+        tools:boxCornerRadiusTopStart="5dp"
+        app:counterEnabled="true"
+        app:counterMaxLength="20"
+        app:errorEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/inputName"
             style="@style/txtSub"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <!--user email-->
+
+    <!--password-->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/userEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="24dp"
         android:hint="@string/prompt_email"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
+        app:counterMaxLength="30"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userName"
@@ -85,13 +91,13 @@
         tools:boxCornerRadiusTopStart="5dp">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/inputEmail"
             style="@style/txtSub"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!--password-->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/userPassword"
         android:layout_width="match_parent"
@@ -107,9 +113,11 @@
         app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userEmail">
+        app:layout_constraintTop_toBottomOf="@+id/userEmail"
+        app:counterMaxLength="20">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/inputPassword"
             style="@style/txtSub"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -144,7 +152,7 @@
         android:layout_height="wrap_content"
 
         android:layout_marginStart="75dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="15dp"
         android:text="@string/txt_login"
         app:layout_constraintEnd_toStartOf="@+id/btnGoSignIn"
@@ -156,7 +164,7 @@
         style="@style/txtSub.bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="78dp"
         android:text="@string/btn_login"
         app:layout_constraintEnd_toEndOf="parent"
