button error fixed
had an erro button style didn't apply, and added app:backgroundTint="@null"
in xml, it is fixed

--- a/EasyMoney/app/src/main/res/layout/activity_register.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_register.xml
@@ -136,6 +136,7 @@
         android:layout_marginTop="60dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/style_btn_blue"
+        app:backgroundTint="@null"
         android:enabled="true"
         android:text="@string/txt_btn_signUp"
         app:layout_constraintEnd_toEndOf="parent"
