--- a/EasyMoney/app/src/main/res/drawable/style_btn_stoke.xml
+++ b/EasyMoney/app/src/main/res/drawable/style_btn_stoke.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-<!--    background color-->
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+
     <solid android:color="#00FFFFFF"/>
 
     <stroke
         android:width="1dp"
-        android:color="@color/black" />
+        android:color="#FFFFFF"/>
 
     <corners
-        android:topLeftRadius="5dp"
-        android:topRightRadius="5dp"
-        android:bottomLeftRadius="5dp"
-        android:bottomRightRadius="5dp"  />
+        android:Radius="5dp"/>
 
     <size android:height="60dp" />
 
