--- a/EasyMoney/app/src/main/res/layout/activity_welcome.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_welcome.xml
@@ -51,8 +51,9 @@
         android:layout_marginEnd="20dp"
         android:background="@drawable/style_btn_white"
         android:text="@string/txt_btn_login"
-        android:textColor="@color/gray6"
+        android:textColor="@color/primaryBlue"
         android:textSize="20sp"
+        app:backgroundTint="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtWelcome" />
@@ -66,6 +67,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/style_btn_stoke"
+        app:backgroundTint="@null"
         android:text="@string/txt_btn_signUp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
