--- a/EasyMoney/app/src/main/res/values/themes.xml
+++ b/EasyMoney/app/src/main/res/values/themes.xml
@@ -3,16 +3,16 @@
 
     <style name="Theme.EasyMoney" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/primaryBlue</item>
         <item name="colorPrimaryVariant">@color/gray4</item>
-        <item name="colorOnPrimary">@color/white</item>
+<!--        <item name="colorOnPrimary">@color/white</item>-->
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+<!--        &lt;!&ndash; Customize your theme here. &ndash;&gt;-->
     </style>
 
 </resources>
